fix: messagelist spacing

--- a/baton/static/baton/app/src/styles/_content.scss
+++ b/baton/static/baton/app/src/styles/_content.scss
@@ -63,6 +63,7 @@
 
 .messagelist {
   list-style-type: none;
+  margin: 0 1rem;
   padding: 0;
 
   .success {
